# sodf

./: .gitmodules  CMakeLists.txt  README.md  package.xml
cmake/: assimp.cmake
database/: scene.xml  scene2.xml
database/biorad/: thermocycler_t100.xml
database/eppendorf/: pcr_plate.xml
ext/ginseng/: ginseng.hpp
include/sodf/: component_type.h  conversion.h  ecs.h  element.h  frame_parsing.h  object.h  uri_resolver.h  volume.h  xml_for_loop_parser.h  xml_macro.h  xml_parser.h
include/sodf/assembly/: constraint.h  constraint_selector.h  namespace.h  selector_context_db.h
include/sodf/behavior/: state.h
include/sodf/components/: action_map.h  button.h  constraint.h  container.h  data_type.h  def_or_ref.h  direct_kinematic.h  domain_shape.h  finite_state_machine.h  fitting.h  fluid_domain_shape.h  grasp.h  id.h  insertion.h  joint.h  link.h  material.h  mesh.h  mesh_builder.h  object.h  origin.h  origin_constraint.h  shape.h  tag.h  touchscreen.h  transform.h
include/sodf/database/: database.h  entity_id.h  ginseng_backend.h  registry_p.h
include/sodf/ecs/: database.h  ginseng_backend.h  registry_p.h
include/sodf/elements/: button.h  container.h  grasp.h  insertion.h  joint.h  mesh.h  touchscreen.h  transform.h
include/sodf/fluid/: fluid_domain_shape.h
include/sodf/geometry/: alignment.h  bounds.h  centroid.h  eigen.h  frame.h  lie.h  mesh.h  mesh_exporter.h  mesh_loader.h  mesh_shape.h  origin.h  shape.h  transform.h  utilities.h
include/sodf/graph/: directed_graph.h
include/sodf/physics/: domain_shape.h  domain_shape_base.h  domain_shape_conversion.h  fluid_domain_shape.h  liquid_builder.h
include/sodf/systems/: fsm.h  liquid_level_joint.h  origin_constraints.h  origin_ls_solver.h  scene_graph.h
include/sodf/xml/: component_parser.h  element_parser.h  entity_parser.h  expression_parser.h  for_loop_parser.h  macros.h  patch_operations.h  scene_model.h  selector.h  utils.h
src/: conversion.cpp  object.cpp  uri_resolver.cpp  volume.cpp  xml_for_loop_parser.cpp  xml_parser.cpp
src/assembly/: constraint.cpp  constraint_selector.cpp  selector_context_db.cpp
src/behavior/: state.cpp
src/elements/: button.cpp  container.cpp  grasp.cpp  insertion.cpp  joint.cpp  touchscreen.cpp
src/fluid/: fluid_domain_shape.cpp
src/geometry/: alignment.cpp  eigen.cpp  frame.cpp  shape.cpp  transform.cpp  volume.cpp
src/graph/: directed_graph.cpp
src/physics/: domain_shape.cpp  domain_shape_base.cpp  domain_shape_conversion.cpp  fluid_domain_shape.cpp
src/systems/: fsm.cpp  liquid_level_joint.cpp  origin_constraints.cpp  origin_ls_solver.cpp  scene_graph.cpp  scene_graph_diff.cpp
src/xml/: component_parser.cpp  element_parser.cpp  entity_parser.cpp  expression_parser.cpp  for_loop_parser.cpp  patch_operations.cpp  selector.cpp
test/: CMakeLists.txt  demo.xml  pcr.xml  test_alignment.cpp  test_container  test_database.cpp  test_database_diff.cpp  test_ecs.cpp  test_expression_parser.cpp  test_fluid_domain_convex_mesh_shape.cpp  test_fluid_domain_shape.cpp  test_graph.cpp  test_object.cpp  test_patch_operations.cpp  test_state.cpp  test_transform.cpp  test_uri_resolver.cpp  test_utilities.cpp  test_volume.cpp  test_xml_parser.cpp
test/resources/: empty_mesh.stl
test/xml/: bio-rad-t100-thermal-cycler.hmi-overlay.xml  bio-rad-t100-thermal-cycler.no-overlay.xml  bio-rad-t100-thermal-cycler.xml  eppendorf-twin-tec-pcr-plate-96.xml  scene-a.xml  scene-b.xml
