<?xml version="1.0"?>
<package format="2">
  <name>sodf</name>
  <version>0.0.0</version>
  <description>Semantic Object Description Format</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>orocos_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
